Fix dark mode issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 
 
 body {
+  min-height: 100dvh;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
